# hand-pose-to-robot-hand

./: README.md
src/camera_feed/: package.xml  setup.py
src/camera_feed/camera_feed/: publisher.py  subscriber.py
src/camera_feed/config/: params.yaml
src/camera_feed/launch/: camera_feed.launch.py
src/control/: package.xml  setup.py
src/control/config/: allegro_hand.json  params.yaml
src/control/control/: allegro_hand_gesture_control.py  hand_pose_to_allegro_hand.py  hand_pose_to_joint_state.py
src/control/launch/: allegro_hand_gesture_control.launch.py  hand_pose_to_allegro_hand.launch.py  hand_pose_to_joint_state.launch.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: HandLandmarks.msg  PoseKeypoint.msg  PoseKeypoints.msg
src/vision_processing/: package.xml  setup.py
src/vision_processing/config/: params.yaml
src/vision_processing/launch/: hand_pose_estimation.launch.py  vision_processing.launch.py
src/vision_processing/vision_processing/: gesture_recognition.py  hand_pose_estimation.py
